CHATS_SIT/force-app/main/default/objects/T_CHATS_PROVR_CNT_INFO_c__x.object
<CustomObject>
    <externalDataSource>OEC_Provider_Datasource</externalDataSource>
    <externalName>Account</externalName>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <externalDeveloperName>License_Number__c</externalDeveloperName>
        <label>Provider ID</label>
        <length>20</length>
        <referenceTargetField>T_CHATS_PROVR_STATUS__c.External_ID__c</referenceTargetField>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Provider Contacts (Provider ID)</relationshipLabel>
        <relationshipName>Provider_Contacts</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>NAM_FULL__c</fullName>
        <externalDeveloperName>Director_of_Program__c</externalDeveloperName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_FAX__c</fullName>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE_SECOND__c</fullName>
        <externalDeveloperName>Other_Reported_Phone_Number__c</externalDeveloperName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE__c</fullName>
        <externalDeveloperName>Director_Authorized_Phone__c</externalDeveloperName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Provider Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>DisplayUrl</columns>
        <columns>IDN_PROVR__c</columns>
        <columns>NBR_FAX__c</columns>
        <columns>NBR_PHONE_SECOND__c</columns>
        <columns>NAM_FULL__c</columns>
        <columns>NBR_PHONE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDN_PROVR__c</field>
            <operation>equals</operation>
            <value>1640220</value>
        </filters>
        <label>All</label>
    </listViews>
    <pluralLabel>Provider Contacts</pluralLabel>
</CustomObject>