CHATS_SIT/force-app/main/default/objects/T_CHATS_PROVR_CNT_INFO_c__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <columns>IDN_PROVR__c</columns>
    <columns>NBR_FAX__c</columns>
    <columns>NBR_PHONE_SECOND__c</columns>
    <columns>NAM_FULL__c</columns>
    <columns>NBR_PHONE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IDN_PROVR__c</field>
        <operation>equals</operation>
        <value>1640220</value>
    </filters>
    <label>All</label>
</ListView>